--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "predeploy": "npm run build:github",
     "deploy": "gh-pages -d dist",
-    "build:github": "vite build --mode=github"
+    "build:github": "vite build --mode=github",
+    "build:netlify": "vite build --mode=development"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
