--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://helenzel.github.io/netflix-clone-2025/",
   "name": "netflix-clone",
   "private": true,
   "version": "0.0.0",
